done v0.1, z-index fix

--- a/src/scss/blur.scss
+++ b/src/scss/blur.scss
@@ -1,4 +1,5 @@
 .blur {
+  z-index: 50000;
   position: absolute;
   top: 0;
   left: 0;
