--- a/src/scss/common-styles.scss
+++ b/src/scss/common-styles.scss
@@ -29,8 +29,8 @@ a {
 }
 
 .global-wrapper {
+  z-index: 10;
   display: flex;
-  // align-items: stretch;
   align-items: stretch;
   @media (min-width: $desktop-width) {
     @include centering-fix($desktop-width);
