--- a/src/scss/side-menu.scss
+++ b/src/scss/side-menu.scss
@@ -19,6 +19,7 @@
     position: relative;
     left: unset;
     box-shadow: unset;
+    z-index: 490;
   }
 
   &__wrapper {
